--- a/style.css
+++ b/style.css
@@ -44,15 +44,15 @@ text-decoration: none;
 }
 body {
 line-height: 1.6;
-color: var(--color-gray-900);
+color: var(--color-gray-200);
 overflow-x: hidden;
 background: var(--color-bg);
 font-size: .9rem;
 }
 .container {
-  width: var(--container-width-lg);
-  max-width: 1000px;
-  margin-inline: auto;
+   width: var(--container-width-lg); 
+   max-width: 1000px;
+   margin-inline: auto; 
 }
 
 section {
@@ -108,5 +108,113 @@ nav button {
   display: none;
 }
 .nav__container {
-  
+  height: 100%;
+  display: flex;
+  align-items: center; 
+  justify-content: space-around;  
+}
+
+.avatar{
+  width:2.7rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+  border: .3rem solid var(--color-bg);
+}
+
+.nav__logo {
+  font-weight: 600;
+  font-size: 1.2rem;
+
+}
+.nav__items {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+
+.nav__profile {
+  position: relative;
+  cursor: pointer;
+}
+
+.nav__profile ul {
+  position: absolute;
+  top: 125%;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 3rem rgba(0, 0, 0, 0.4);
+  background: var(--color-gray-900);
+}
+
+.nav__profile ul li a {
+  padding: 1rem;
+  background: var(--color-gray-900);
+  display: block;
+  width: 100%;
+}
+.nav__profile ul li a:last-child(){
+  background: var(--color-red);
+  color: var(--color-bg);
+}
+
+/* category */
+
+.category-button{
+ background: var(--color-primary-lifgt);
+ color: inline-block;
+ padding: 0.5rem 1rem;
+ border-radius: var(--card-border-radius-2);
+ font-weight: 600;
+ font-size: .8rem;
+ text-align: center;
+}
+
+.category-button:hover {
+  color: var(--color-white);
+
+}
+
+/* general post  */
+
+.post__thumbnail{
+  border-radius: var(--card-border-radius-5) 0;
+  border: 1rem solid var(--color-gray-900);
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+}
+.post:hover .post__thumbnail img {
+  filter: saturate(0);
+  transition: filter 500ms ease;
+}
+
+.post__author {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1.2rem;
+}
+
+.post__author-avatar{
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: var(--card-border-radius-3);
+  overflow: hidden;
+
+}
+
+/* featured */
+
+.featured {
+  margin-top: 8rem;
+}
+
+.featured__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+}
+
+.featured .post__thumbnail{
+  height: fit-content;
 }
