--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ nav {
   background: var(--color-bg-secondary);
   border-radius: var(--card-border-radius-2);
   box-shadow: 0 4px 12px var(--color-shadow);
-  visibility: hidden;
+  /* visibility: hidden; */
   opacity: 0;
   transition: var(--transition);
 }
@@ -436,4 +436,54 @@ nav button {
   .footer__container h3:hover {
     transform: none; 
   }
+
+/* ------------------------NAV */ /* -------------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------------- */
+
+nav button {
+  display: inline-block;
+
+  background: transparent;
+  color: var(--color-white);
+
+  font-size: 1.5rem;
+
+  cursor: pointer;
 }
+.nav__container{
+  position: relative;
+}
+.nav__items{
+  position: absolute;
+  flex-direction: column;
+  top: 100%;
+  align-items: flex-start;
+  right: 0;
+  width: 12rem;
+  justify-content: center;
+  gap: 0;
+}
+
+.nav__items li{
+  width: 100%;
+  height: 4.5rem;
+  box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
+  display: flex;
+  background: var(--color-bg-secondary);
+  border-top: 1px solid var(--color-primary-light);
+  align-items: center;
+  gap: 1rem;
+}
+.nav__items li a{
+  border-radius: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--color-bg-secondary);
+  padding: 0 2rem;
+  display: flex;
+  align-items: center;
+}
+}
+
+
